<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Napping Player</string>
    <string name="title_activity_start">Welcome to Napping Player!</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_unimplemented_header">Unavailable</string>
    <string name="dialog_unimplemented_body">This is currently not implemented, sorry.</string>

    <!-- Start Activity -->
    <string name="welcome">Welcome to Napping Player!</string>
    <string name="menu_settings">Preferences</string>
    <string name="menu_data">Experiment Data</string>
    <string name="start">Start Napping!</string>
    <string name="enter_name">What\'s your name?</string>
    <string name="enter_name_prompt">You need to enter a name!</string>
    <string name="finished_napping">You\'re done. Please hand this tablet to the instructor.</string>
    <string name="canceled_napping">You\'ve canceled this experiment.</string>

    <!-- Napping Activity -->
    <string name="play_next_video">Play Next</string>
    <string name="click_play_to_start">Click \'Play Next\' to start!</string>
    <string name="drag_around">Drag the video around to position it.\nClick \'Play Next\' when you\'re done!</string>
    <string name="seen_all">You\'ve seen all videos. Now please arrange them!\nClick on a video to see it again.</string>
    <string name="add_videos_to_group">Add videos to this group by tapping them.\nTap again to remove them.</string>
    <string name="finish">Finish!</string>
    <string name="dialog_close_header">Exit?</string>
    <string name="dialog_close_body">Do you really want to quit the experiment?</string>
    <string name="dialog_finish_header">Finish?</string>
    <string name="dialog_finish_body">You\'re about to finish the experiment. Are you sure?</string>
    <string name="menu_play_next">Play Next</string>
    <string name="menu_finish_napping">Finish</string>
    <string name="menu_finish">Finish</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_move_mode">Move Cards</string>
    <string name="menu_group_mode">Group Cards</string>
    <string name="menu_edit_keywords">Edit Keywords</string>
    <string name="menu_create_group">Create Group</string>
    <string name="group">Group</string>
    <string name="dialog_edit_keywords_title">Edit Keywords</string>
    <string name="dialog_edit_keywords_body">Edit the keywords for this group. Separate keywords by a comma (\',\').</string>

    <!-- Prefs -->
    <string name="pref_cat_video">Video preferences</string>
    <string name="pref_cat_post_exp">Post-experiment options</string>
    <string name="pref_cat_in_exp">Experiment options</string>
    <string name="list_scale_title">Display mode</string>
    <string name="list_scale_summary">How should the video be displayed?</string>
    <string name="video_start_title">Video start delay</string>
    <string name="video_start_summary">How long in milliseconds the video title is shown?</string>
    <string name="send_email_title">Send results as email</string>
    <string name="send_email_summary_active">Send e-mail after an experiment is finished</string>
    <string name="send_email_summary_inactive">Don\'t send e-mail after an experiment is finished</string>
    <string name="send_email_address_title">Recipient address</string>
    <string name="send_email_address_summary">Which e-mail address should the mails be sent to?</string>
    <string name="enable_grouping_title">Enable grouping</string>
    <string name="enable_grouping_summary_active">Videos can be grouped after they\'re all played</string>
    <string name="enable_grouping_summary_inactive">Videos can not be grouped after they\'re all played</string>
    <string name="enable_movement_title">Enable movement</string>
    <string name="enable_movement_summary_active">Videos can be moved while in grouping mode</string>
    <string name="enable_movement_summary_inactive">Videos can not be moved while in grouping mode</string>

    <!-- Data Explorer -->
    <string name="title_activity_data_explorer">Experiment Data</string>
    <string name="menu_clear">Delete all log files</string>
    <string name="log_files">Log Files</string>
    <string name="video_files">Video Files</string>
    <string name="dialog_clear_header">Delete all files?</string>
    <string name="dialog_clear_body">Do you really want to delete all log files?\nThis cannot be undone!</string>
    <string name="dialog_unknown_header">Unknown file</string>
    <string name="dialog_unknown_body">Cannot view this file type at the moment.</string>

    <!-- Credits -->
    <string name="title_activity_credits">About</string>
    <string name="menu_credits">About</string>
    <string name="credits">NappingPlayer, written by Werner Robitza, University of Vienna.\nTo get in contact visit github.com/slhck/NappingPlayer.</string>
</resources>